# matlab_wrapper_service

./: .gitignore  CMakeLists.txt  Makefile  README  README.cmake  messages.py  model.py  model_call.py  prepare_src  service.py  udp_listener.py
files/: init  logrotate  systemd
wrapper/: wrapper.c  wrapper.h
